# CustomerCounter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  dependencies.txt  main.py  pyproject.toml  test.py
customercounter/: __init__.py  operating_system.py  settings.py  thread.py  tui.py
customercounter/electronic_device/: electronic_device.py  state_machine.py  store.py
customercounter/event/: collector.py  event.py  manager.py  pool.py  receiver.py  transmitter.py  transmitter_receiver.py  type.py
customercounter/network/: analyzer.py  sniffer.py  store.py
tests/electronic_device/: test_electronic_device.py  test_state_machine.py  test_store.py
tests/event/: conftest.py  test_collector.py  test_event_manager.py  test_event_pool.py  test_event_receiver.py  test_event_transmitter.py
tests/network/: test_store.py
